<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AndroidCode</string>

    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="mobilenumber_hint">手机号只能以“+”或数字开头第二位开始只能包含“-”和数字</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="mobilenumber_empty_guide">手机号为空将清除之前设置的手机号</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>

    <string name="pick_contact">Pick Contact</string>
    <string name="image_contact">Image based on contact Uri, best size on latest Android</string>
    <string name="image_lookup">Image based on lookup Uri, same as contact Uri</string>
    <string name="image_photo">Image based on photo Uri, thumbnail sized, usually 96x96px</string>
    <string name="image_display_photo">Image based on display photo Uri, possibly 512x512px</string>
    <string name="hint_number_entry">Find by phone number</string>
    <string name="button_search_phone">Find</string>
    <string name="glide_contact">glide_contact_uri</string>

    <!--XXPermissions-->
    <string name="xxpermission_request">请求运行时权限</string>
    <string name="xxpermission_ishas">权限是否已经获取</string>
    <string name="xxpermission_settingpage">应用权限设置页面</string>
    <string name="title_activity_xxpermissions_main">xxpermissions</string>


    <string name="content_hint">Content</string>
    <string name="drawer_hint">Drawer</string>
    <string name="rounded">See Rounded</string>
    <string name="squared">See Squared</string>


    <string name="menu_simple">Simple Divider List</string>
    <string name="menu_paint">Paint Divider List</string>
    <string name="menu_drawable">Drawable Divider List</string>
    <string name="menu_complex">Complex Divider List</string>
    <string name="menu_simple_grid">Simple Divider Grid</string>


    <string name="normal_toast_with_icon">NORMAL TOAST (WITH ICON)</string>
    <string name="normal_toast_without_icon">NORMAL TOAST (WITHOUT ICON)</string>
    <string name="warning_toast">WARNING TOAST</string>
    <string name="info_toast">INFO TOAST</string>
    <string name="info_toast_with_formatting">INFO TOAST WITH FORMATTING</string>
    <string name="error_toast">ERROR TOAST</string>
    <string name="success_toast">SUCCESS TOAST</string>
    <string name="custom_configuration">CUSTOM CONFIGURATION</string>

    <string name="error_message">This is an error toast.</string>
    <string name="success_message">Success!</string>
    <string name="info_message">Here is some info for you.</string>
    <string name="warning_message">Beware of the dog.</string>
    <string name="normal_message_without_icon">Normal toast w/o icon</string>
    <string name="normal_message_with_icon">Normal toast w/ icon</string>
    <string name="custom_message">sudo kill -9 everyone</string>
    <string name="title_activity_top_iv_immer_bar">TopIvImmerBarActivity</string>


</resources>
