<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".libraries.recy_divider.RecyDividerMainActivity">
    <item
            android:id="@+id/action_paint"
            android:title="@string/menu_paint"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_drawable"
            android:title="@string/menu_drawable"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_complex"
            android:title="@string/menu_complex"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_simple_grid"
            android:title="@string/menu_simple_grid"
            app:showAsAction="never"/>
</menu>