<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".libraries.xxpermissions.XXPermissionsMainActivity"
        android:orientation="vertical"
>
    <include layout="@layout/toolbar_common"/>
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
        >

            <Button
                    android:id="@+id/btnRequestPer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/xxpermission_request"/>

            <Button
                    android:id="@+id/btnIsHasPermission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/xxpermission_ishas"/>

            <Button
                    android:id="@+id/btnPermissionSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/xxpermission_settingpage"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>