<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.deawable.DrawerArrowActivity">
    <!-- Action-bar looking view -->
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/dark_gray"
    >

        <ImageView
                android:id="@+id/drawer_indicator"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="centerInside"
                android:background="@drawable/drawer_selector"
                android:layout_gravity="start"
        />

        <TextView
                android:id="@+id/indicator_style"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_gravity="end"
                android:text="@string/rounded"
                android:textStyle="bold"
                android:textColor="@color/light_gray"
                android:gravity="center"
                android:background="@drawable/drawer_selector"
        />

    </FrameLayout>

    <!-- Content -->
    <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
    >

        <TextView
                android:id="@+id/view_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/content_hint"
        />

        <TextView
                android:id="@+id/drawer_content"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center"
                android:text="@string/drawer_hint"
                android:textColor="@color/light_gray"
                android:background="@color/darker_gray"
        />

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>